--- a/src/assets/css/Casino.css
+++ b/src/assets/css/Casino.css
@@ -3,6 +3,44 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --bg-input: #f8f8f8;
+  --border-color: rgb(0, 0, 0) !important;
+  --white: #ffffff;
+  --bg-button: #afddd1;
+  --bg-button-hover: #a2d3c6;
+
+  --font-16-18: clamp(1rem, 1vw + 0.5rem, 1.125rem);
+  --font-22-24: clamp(1.375rem, 1vw + 0.75rem, 1.5rem);
+
+  --spacing-4: 0.25rem;
+  --spacing-6-8: clamp(0.375rem, 0.5vw + 0.375rem, 0.5rem);
+  --spacing-10-12: clamp(0.625rem, 0.75vw + 0.625rem, 0.75rem);
+  --spacing-14-16: clamp(0.825rem, 1vw + 0.825rem, 1rem);
+  --spacing-inline-container: clamp(1rem, 2vw + 4rem, 8rem);
+  --spacing-block-container: clamp(1rem, 1vw + 1rem, 2rem);
+
+  --br-4: 0.25rem;
+
+  --gap-2-6: clamp(0.125rem, 0.5vw + 0.25rem, 0.625rem);
+  --gap-8: 0.5rem;
+  --gap-12: 0.75rem;
+}
+
+html {
+  background-color: #f1f1f1;
+  color: #000000dd;
+  font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Segoe UI,
+    Tahoma, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Open Sans, sans-serif;
+}
+
 .casino-page {
   position: relative;
   top: 64px;
@@ -244,6 +282,7 @@ a {
 
   .left-sidebar {
     width: 20rem;
+    text-align: start;
 
     h2 {
       margin-bottom: var(--gap-8);
@@ -931,7 +970,7 @@ a {
         margin-bottom: var(--gap-8);
 
         svg {
-          margin-top: 0.5rem;
+          margin-top: -0.5rem;
           width: 1rem;
           height: 1rem;
         }
@@ -946,6 +985,40 @@ a {
         margin-top: 0.325rem;
       }
     }
+  }
+}
+
+.main {
+  min-height: 100vh;
+  background-color: #ffffffcc;
+  color: #000000dd;
+  padding-block: 6rem !important;
+
+  h2 {
+    font-size: 2rem;
+    font-weight: 700;
+  }
+  h4{
+    font-size: var(--font-16-18);
+  }
+  span {
+    font-size: var(--spacing-14-16);
+  }
+
+  h2,
+  h3,h4 {
+    color: #000000;
+  }
+  p {
+    font-size: var(--font-16-18);
+  }
+
+  .right-content .content h2 {
+    font-size: 2rem !important;
+    font-weight: 700;
+    white-space: nonw;
+    line-height: 0;
+    height: 1rem;
   }
 }
 /* bank */
@@ -1382,7 +1455,7 @@ a {
         margin-bottom: var(--gap-8);
 
         svg {
-          margin-top: 0.5rem;
+          margin-top: -0.5rem;
           width: 1rem;
           height: 1rem;
         }
@@ -1495,7 +1568,8 @@ a {
         margin-bottom: var(--gap-8);
 
         svg {
-          margin-top: 0.5rem;
+
+          margin-top: -0.5rem;
           width: 1rem;
           height: 1rem;
         }
@@ -1678,7 +1752,7 @@ a {
         margin-bottom: var(--gap-8);
 
         svg {
-          margin-top: 0.5rem;
+          margin-top: -0.5rem;
           width: 1rem;
           height: 1rem;
         }
@@ -1852,11 +1926,7 @@ a {
 }
 
 /*offer  */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+
 a {
   color: #ffffff;
   text-decoration: none;
@@ -1926,42 +1996,6 @@ a {
 }
 
 /*main  */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-:root {
-  --bg-input: #f8f8f8;
-  --border-color: rgb(230, 204, 204);
-  --white: #ffffff;
-  --bg-button: #afddd1;
-  --bg-button-hover: #a2d3c6;
-
-  --font-16-18: clamp(1rem, 1vw + 0.5rem, 1.125rem);
-  --font-22-24: clamp(1.375rem, 1vw + 0.75rem, 1.5rem);
-
-  --spacing-4: 0.25rem;
-  --spacing-6-8: clamp(0.375rem, 0.5vw + 0.375rem, 0.5rem);
-  --spacing-10-12: clamp(0.625rem, 0.75vw + 0.625rem, 0.75rem);
-  --spacing-14-16: clamp(0.825rem, 1vw + 0.825rem, 1rem);
-  --spacing-inline-container: clamp(1rem, 2vw + 4rem, 8rem);
-  --spacing-block-container: clamp(1rem, 1vw + 1rem, 2rem);
-
-  --br-4: 0.25rem;
-
-  --gap-2-6: clamp(0.125rem, 0.5vw + 0.25rem, 0.625rem);
-  --gap-8: 0.5rem;
-  --gap-12: 0.75rem;
-}
-
-html {
-  background-color: #f1f1f1;
-  color: #000000dd;
-  font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Segoe UI,
-    Tahoma, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Open Sans, sans-serif;
-}
 
 a {
   text-decoration: none;
