--- a/src/assets/css/casinoFooterCss.css
+++ b/src/assets/css/casinoFooterCss.css
@@ -4,6 +4,28 @@
   box-sizing: border-box;
 }
 :root {
+  --bg-input: #f8f8f8;
+  --border-color: rgb(230, 204, 204);
+  --white: #ffffff;
+  --bg-button: #afddd1;
+  --bg-button-hover: #a2d3c6;
+
+  --font-16-18: clamp(1rem, 1vw + 0.5rem, 1.125rem);
+  --font-22-24: clamp(1.375rem, 1vw + 0.75rem, 1.5rem);
+
+  --spacing-4: 0.25rem;
+  --spacing-6-8: clamp(0.375rem, 0.5vw + 0.375rem, 0.5rem);
+  --spacing-10-12: clamp(0.625rem, 0.75vw + 0.625rem, 0.75rem);
+  --spacing-14-16: clamp(0.825rem, 1vw + 0.825rem, 1rem);
+  --spacing-inline-container: clamp(1rem, 2vw + 4rem, 8rem);
+  --spacing-block-container: clamp(1rem, 1vw + 1rem, 2rem);
+
+  --br-4: 0.25rem;
+
+  --gap-2-6: clamp(0.125rem, 0.5vw + 0.25rem, 0.625rem);
+  --gap-8: 0.5rem;
+  --gap-12: 0.75rem;
+
   --spacing-sm: 0.25rem;
   --spacing-md: 0.5rem;
   --spacing-lg: 0.75rem;
@@ -11,6 +33,13 @@
   --main-color: #14805e;
   --text-color: #444444;
   --footer-bg: #f0f0f0;
+}
+
+html {
+  background-color: #f1f1f1;
+  color: #000000dd;
+  font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Segoe UI,
+    Tahoma, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Open Sans, sans-serif;
 }
 
 body {
@@ -318,13 +347,13 @@ body {
         text-wrap: nowrap;
         border-bottom: 1px solid var(--text-color);
 
-        & p:nth-child(2){
+        & p:nth-child(2) {
           margin-left: -0.5rem;
         }
-        & p:nth-child(3){
+        & p:nth-child(3) {
           margin-left: -0.5rem;
         }
-        & p:nth-child(4){
+        & p:nth-child(4) {
           margin-left: -0.5rem;
         }
       }
@@ -377,14 +406,14 @@ body {
           }
         }
 
-        .table-middle-middle{
+        .table-middle-middle {
           display: flex;
           align-items: center;
           gap: var(--spacing-xl);
           padding-top: var(--spacing-md);
           padding-left: var(--spacing-xl);
 
-          p{
+          p {
             padding: var(--spacing-sm);
           }
         }
@@ -433,6 +462,287 @@ body {
     .footer-rights {
       margin-block: var(--spacing-xl);
       text-align: center;
+    }
+  }
+}
+
+label {
+  display: block;
+  padding-block: var(--spacing-4);
+}
+
+input {
+  width: 100%;
+  margin-bottom: var(--spacing-4);
+  padding: var(--spacing-10-12) var(--spacing-14-16);
+  border-radius: var(--br-4);
+  background-color: var(--bg-input);
+  outline: none;
+  border: 1px solid var(--border-color);
+  font-size: 1rem;
+}
+/* .container {
+  padding: var(--spacing-block-container) var(--spacing-inline-container);
+} */
+
+.button {
+  padding: var(--spacing-10-12) var(--spacing-14-16);
+  border: 1px solid black;
+  border-radius: var(--br-4);
+  background-color: transparent;
+  font-size: 1rem;
+  color: #000000dd;
+  font-weight: 600;
+}
+
+/* .nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 2rem;
+  border: 1px solid blue;
+
+  .profile {
+    position: relative;
+
+    .profile-icon {
+      background-color: blue;
+      color: white;
+      padding: 1rem 1.25rem;
+      border-radius: 50%;
+    }
+
+   
+  }
+} */
+
+#profile-side-bar {
+  font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Segoe UI,
+    Tahoma, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Open Sans, sans-serif;
+  color: rgba(0, 0, 0, 0.8);
+  padding: var(--spacing-6-8) var(--spacing-10-12);
+  border-radius: 0.25rem;
+  position: fixed;
+  top: 4rem;
+  left: calc(100vw - 26rem);
+  width: 25.75rem;
+  max-height: calc(-4rem + 100vh);
+  border: 1px solid blue;
+  outline: none;
+
+  p{
+    font-size: var(--font-16-18);
+  }
+
+  & .profile-data-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: var(--spacing-6-8);
+
+    & .profile-data-top-left {
+
+      line-height: 0;
+      text-align: start;
+
+      & .profile-data-top-left-bottom {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: var(--gap-2-6);
+
+        & .profile-data-top-amount {
+          font-size: 1.5rem;
+          font-weight: 700;
+        }
+
+        .profile-data-refresh-icon{
+          svg{
+            width: 1.25rem;
+            height: 1.25rem;
+          }
+        }
+      }
+    }
+
+    & .profile-data-top-right {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.25rem;
+      font-size: var(--font-16-18);
+      font-weight: 600;
+
+      svg {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
+    }
+  }
+
+  & .profile-data-top-bottom {
+    display: flex;
+    align-items: center;
+    gap: clamp(1.25rem, 4vw + 0.25rem, 8rem);
+  }
+
+  & .profile-tabs {
+    margin-top: 1.25rem;
+
+    & .tab-items {
+      display: flex;
+      align-items: center;
+      gap: var(--gap-2-6);
+      border-top: 1px solid wheat;
+
+      & label {
+        font-size: var(--font-16-18);
+        font-weight: 600;
+        padding: var(--spacing-14-16) var(--spacing-14-16);
+      }
+    }
+
+    #profile-tab-account:checked ~ .tab-items .tab-account {
+      border-bottom: 1px solid blueviolet;
+    }
+    #profile-tab-offers:checked ~ .tab-items .tab-offers {
+      border-bottom: 1px solid blueviolet;
+    }
+    #profile-tab-preferences:checked ~ .tab-items .tab-preferences {
+      border-bottom: 1px solid blueviolet;
+    }
+
+    .tab-content {
+      display: none;
+      padding: var(--spacing-6-8) var(--spacing-10-12);
+      text-align: start;
+    }
+
+    #profile-tab-account:checked ~ .profile-tab-content-account {
+      display: block;
+
+      .tab-content-cards {
+        display: grid;
+        place-items: center;
+        gap: 1rem;
+        grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
+        border-bottom: 1px solid wheat;
+        padding-bottom: var(--spacing-14-16);
+
+        & .tab-content-card {
+          text-align: center;
+          
+          svg {
+            width: 2.5rem;
+            height: 2.5rem;
+          }
+
+          h5{
+            font-size: var(--spacing-14-16);
+          }
+        }
+      }
+
+      h3 {
+        padding: var(--spacing-6-8);
+        font-size: 1.325rem;
+        text-align: start;
+        font-weight: 600;
+      }
+      & .logout {
+        border-top: 1px solid wheat;
+      }
+    }
+
+    #profile-tab-offers:checked ~ .profile-tab-content-offers {
+      display: block;
+
+      h4 {
+        padding-bottom: 0.25rem;
+      }
+
+      p {
+        padding-block: 0.25rem;
+      }
+    }
+
+    #profile-tab-preferences:checked ~ .profile-tab-content-preferences {
+      display: block;
+
+      details {
+        position: relative;
+
+        &::after {
+          content: "ᨆ";
+          position: absolute;
+          top: 1rem;
+          right: 0.5rem;
+          transition: transform 0.3s ease-in-out;
+          transform-origin: center center;
+        }
+        &[open]::after {
+          transform: rotate(180deg);
+        }
+        summary {
+          padding: var(--spacing-6-8) var(--spacing-10-12);
+          border-block: 1px solid wheat;
+          list-style-type: none;
+
+          h4 {
+            margin-top: 0.325rem;
+          }
+        }
+
+        .data {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+
+          li {
+            padding: var(--spacing-6-8);
+          }
+        }
+      }
+
+      .toggle-label {
+        padding: var(--spacing-6-8) var(--spacing-10-12);
+        border-block: 1px solid wheat;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        input[type="checkbox"] {
+          display: none;
+        }
+      }
+
+      .toggle-switch {
+        position: relative;
+        width: 40px;
+        height: 20px;
+        background: #ccc;
+        border-radius: 20px;
+        transition: background 0.3s;
+      }
+
+      .toggle-switch::before {
+        content: "";
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        width: 16px;
+        height: 16px;
+        background: white;
+        border-radius: 50%;
+        transition: transform 0.3s;
+      }
+
+      .toggle-label input[type="checkbox"]:checked + .toggle-switch {
+        background: blueviolet;
+      }
+
+      .toggle-label input[type="checkbox"]:checked + .toggle-switch::before {
+        transform: translateX(20px);
+      }
     }
   }
 }
