--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -724,7 +724,6 @@ img.common-left-img.mobile {
     background-image: conic-gradient(from 1turn,rgba(88,175,16,1),rgba(29,128,58,1),rgba(88,175,16,1) );
     width: 112px;
     height: 44px;
-    margin-right: 24px;
     font-weight: 600;
     border-radius: var(--border-radius);
     border: none;
@@ -734,6 +733,7 @@ img.common-left-img.mobile {
     float: right;
     display: flex;
     align-items: center;
+    height: 64px;
 }
 
 .top-action button.profile-btn{
