--- a/src/assets/css/sports.css
+++ b/src/assets/css/sports.css
@@ -11,3 +11,17 @@
     }
 
 } 
+
+@media (width < 1040px){
+
+    .sports-container{
+        grid-template-columns: 1fr;
+        .in-play{
+            width: 100%;
+        }
+        .iframe{
+            display: none;
+        }
+    }
+
+}
