--- a/src/assets/css/casinoFooterCss.css
+++ b/src/assets/css/casinoFooterCss.css
@@ -72,6 +72,7 @@ body {
 }
 
 .casino-header {
+  padding-top: 5rem !important;
   width: 100%;
   background-color: var(--main-color);
   padding-block: var(--spacing-md);
@@ -116,15 +117,18 @@ body {
         svg {
           width: 1.5rem;
           height: 1.5rem;
+          fill: var(--white);
         }
       }
       #country {
         padding: var(--spacing-md) var(--spacing-xl);
         font-size: var(--spacing-xl);
-        width: 20rem;
+        width: 25rem;
         border: none;
-        border-bottom: 1px solid var(--text-color);
+        border: 1px solid var(--text-color);
         border-radius: var(--spacing-sm);
+        background-color: #24262b;
+        color: var(--white);
       }
     }
 
@@ -481,9 +485,6 @@ input {
   border: 1px solid var(--border-color);
   font-size: 1rem;
 }
-/* .container {
-  padding: var(--spacing-block-container) var(--spacing-inline-container);
-} */
 
 .button {
   padding: var(--spacing-10-12) var(--spacing-14-16);
@@ -523,12 +524,25 @@ input {
   padding: var(--spacing-6-8) var(--spacing-10-12);
   border-radius: 0.25rem;
   position: fixed;
+  z-index: 50;
   top: 4rem;
   left: calc(100vw - 26rem);
   width: 25.75rem;
   max-height: calc(-4rem + 100vh);
   border: 1px solid blue;
   outline: none;
+
+
+  & button.overlay{
+    position: fixed;
+    z-index: -1;
+    inset: 0;
+    background-color: #000000a4 !important ;
+    background-image: none;
+    mix-blend-mode: lighten;
+    width: 100%;
+    height: 100%;
+  }
 
   p{
     font-size: var(--font-16-18);
