--- a/src/assets/css/oddslist.css
+++ b/src/assets/css/oddslist.css
@@ -42,9 +42,9 @@
   font-family: FuturaPTCond-Bold, -apple-system, "sans-serif-condensed",
     BlinkMacSystemFont, Segoe UI, Roboto, Open Sans Condensed, sans-serif;
   font-variation-settings: "wght" 700, "wdth" 40;
-  font-size: 23px;
   font-weight: 700;
   text-transform: uppercase;
+ font-size: 1.5rem;
 }
 
 .ss-HomepageSpotlight_Modules {
@@ -77,7 +77,7 @@
   height: 45px;
   padding: 0 var(--gutter);
   align-items: center;
-  margin-bottom: 3px;
+  margin-bottom: 1rem;
 }
 
 .cpm-Header_HeaderImage {
@@ -105,10 +105,11 @@
   font-family: FuturaPTCond-Bold, -apple-system, "sans-serif-condensed",
     BlinkMacSystemFont, Segoe UI, Roboto, Open Sans Condensed, sans-serif;
   font-variation-settings: "wght" 700, "wdth" 40;
-  font-size: 23px;
+ 
   font-weight: 700;
   line-height: 27px;
   text-transform: uppercase;
+  margin-bottom: 1rem;
 }
 
 .cpm-Header_LinkContainer {
@@ -146,6 +147,7 @@
 
 .cpm-CouponPodMarketGrid {
   position: relative;
+  margin-top: 1rem;
 }
 
 .cpm-CouponPodModule-1 .cpm-CouponPodMarketGroup,
