--- a/src/assets/css/Casino.css
+++ b/src/assets/css/Casino.css
@@ -1089,7 +1089,6 @@ a {
       align-items: center;
       justify-content: center;
       gap: 1rem;
-      padding-inline: 2rem;
       margin-bottom: 0.75rem;
 
       .button {
@@ -1106,14 +1105,13 @@ a {
       }
     }
     h3 {
-      margin-block: 0.75rem;
+      padding-block: 0.25rem 0.5rem;
     }
     ul {
       li {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding-block: var(--gap-8);
 
         & span:last-child {
           font-size: var(--font-22-24);
@@ -1305,6 +1303,7 @@ a {
     }
   }
 }
+
 
 /* offer */
 .main {
@@ -2297,11 +2296,13 @@ input {
   #account-toggle:checked ~ .left-sidebar {
       display: block;
       position: absolute;
-      top: 5.5rem;
+      top: 4rem;
+      left: 0;
       z-index: 10;
-      background-color: #9eead5;
-      width: 70%;
-      height: 70vh;
+      background-color: #9ed3c4;
+      width: 100%;
+      height: 80vh;
+      padding: var(--spacing-block-container) var(--spacing-inline-container);
   }
 
 }
