Bottom Nav Update 1

--- a/src/assets/css/casinoFooterCss.css
+++ b/src/assets/css/casinoFooterCss.css
@@ -9,6 +9,7 @@
   --white: #ffffff;
   --bg-button: #afddd1;
   --bg-button-hover: #a2d3c6;
+  --bg-sidebar: #1c1e22:
 
   --font-16-18: clamp(1rem, 1vw + 0.5rem, 1.125rem);
   --font-22-24: clamp(1.375rem, 1vw + 0.75rem, 1.5rem);
@@ -546,12 +547,12 @@ input {
    
   }
 } */
-
+ 
 #profile-side-bar {
   font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Segoe UI,
     Tahoma, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Open Sans, sans-serif;
   color: rgba(0, 0, 0, 0.8);
-  padding: var(--spacing-6-8) var(--spacing-10-12);
+  padding: var(--spacing-10-12);
   border-radius: 0.25rem;
   position: fixed;
   z-index: 50;
@@ -559,14 +560,18 @@ input {
   left: calc(100vw - 26rem);
   width: 25.75rem;
   max-height: calc(-4rem + 100vh);
-  border: 1px solid blue;
+  border: none;
   outline: none;
+
+  & .profile-close{
+    display: none;
+  }
 
   & button.overlay {
     position: fixed;
     z-index: -1;
     inset: 0;
-    background-color: #000000a4 !important;
+    background-color: #000000a4 ;
     background-image: none;
     mix-blend-mode: lighten;
     width: 100%;
@@ -656,7 +661,7 @@ input {
 
     .tab-content {
       display: none;
-      padding: var(--spacing-6-8) var(--spacing-10-12);
+      padding-block: var(--spacing-6-8) var(--spacing-10-12);
       text-align: start;
     }
 
@@ -698,6 +703,7 @@ input {
 
     #profile-tab-offers:checked ~ .profile-tab-content-offers {
       display: block;
+      padding-inline: var(--spacing-6-8);
 
       h4 {
         padding-bottom: 0.25rem;
@@ -787,4 +793,83 @@ input {
       }
     }
   }
+
+}
+
+
+@media (width < 420px){
+ 
+  #profile-side-bar{
+    width: 100%;
+    padding: 3rem 1rem 1rem;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: var(--bg-sidebar);
+    color: #ffffff !important;
+
+   & button.overlay{
+    background-color: #1c1e22;
+      mix-blend-mode: normal;
+    }
+
+    .profile-data-refresh-icon {
+      svg {
+        width: 1.25rem;
+        height: 1.25rem;
+        fill: white;
+      }
+    }
+
+    button.profile-close{
+      display: block ;
+      background-color: transparent ;
+      background-image: none;
+      position: absolute;
+      top: 0.325rem;
+      right: -1rem;
+
+      svg{
+        fill: white;
+      }
+    }
+    .tab-content{
+
+      .deposit-btn-offers{
+        text-wrap: nowrap;
+        width: auto;
+        display: grid;
+        place-content: center;
+      }
+    }
+    .tab-content-card{
+      color: white;
+
+      svg.profile-icon .cls-1{
+        fill: var(--white) !important;
+      }
+
+      svg{
+        fill: var(--white);
+
+        &:nth-child(3){
+          fill: var(--white) !important;
+        } 
+
+        &:nth-child(5){
+          fill: black;
+          stroke: black !important;
+        }
+      }
+      
+      svg.history-icon{
+        fill: white !important;
+        stroke: white !important;
+      }
+      h5{
+        color: #ffffff;
+      }
+    }
+  }
+
 }
