--- a/src/assets/css/casinoFooterCss.css
+++ b/src/assets/css/casinoFooterCss.css
@@ -9,7 +9,7 @@
   --white: #ffffff;
   --bg-button: #afddd1;
   --bg-button-hover: #a2d3c6;
-  --bg-sidebar: #1c1e22:
+  --bg-sidebar: #1c1e22;
 
   --font-16-18: clamp(1rem, 1vw + 0.5rem, 1.125rem);
   --font-22-24: clamp(1.375rem, 1vw + 0.75rem, 1.5rem);
