--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -55,11 +55,12 @@
     justify-content: space-between;
 
     h1 {
+      color: var(--text-color);
       font-size: 1.5rem;
       font-family: FuturaPtDemi;
       font-weight: bolder;
     }
-  }
+  } 
 
   .card-lists-cards {
     margin-block: 0.5rem;
